# cricket

./: .gitignore  3D_VISUALIZATION_README.md  API_INTEGRATION.md  CMakeLists.txt  Info.plist  README.md  build.sh  demo_3d_visualization.cpp  demo_auction_visualization.cpp
backup_graphics/: CMakeLists_graphics.txt  Game.cpp  Game.h
build_console/assets/data/: players.json  teams.json  venues.json
config/: api_config.json
include/: AnimatedScoreboard.h  AnimationHandler.h  AuctionManager.h  AuctionVisualizer.h  CommentaryManager.h  DataManager.h  GUIManager.h  Game.h  MainMenuManager.h  MatchEngine.h  MatchVisualizer.h  Model.h  ParticleSystem.h  Player.h  ScreenEffect.h  Shader.h  Team.h  TextureManager.h  TournamentManager.h  UIRenderer.h  Venue.h
include/glad/: glad.h
include/glad/glad/include/glad/: glad.h
shaders/: auction_hall_fragment.glsl  auction_hall_vertex.glsl  ball_fragment.glsl  ball_vertex.glsl  field_fragment.glsl  field_vertex.glsl  fragment.glsl  player_fragment.glsl  player_vertex.glsl  team_representative_fragment.glsl  team_representative_vertex.glsl  ui_fragment.glsl  ui_vertex.glsl  vertex.glsl
src/: AnimatedScoreboard.cpp  AnimationHandler.cpp  AuctionManager.cpp  AuctionVisualizer.cpp  CommentaryManager.cpp  DataManager.cpp  GUIManager.cpp  Game.cpp  MainMenuManager.cpp  MatchEngine.cpp  MatchVisualizer.cpp  Model.cpp  ParticleSystem.cpp  Player.cpp  ScreenEffect.cpp  Shader.cpp  Team.cpp  TextureManager.cpp  TournamentManager.cpp  UIRenderer.cpp  Venue.cpp  glad.c  main.cpp  teams.json
